[package]
name = "ledcubers"
version = "0.1.0"
authors = ["Cyrill Leutwiler <bigcyrill@hotmail.com>"]
edition = "2018"

[dependencies]
gd32vf103xx-hal = "0.3.0"
embedded-hal = "0.2.4"
nb = "1"
riscv = "0.5.4"
st7735-lcd = "0.7"
# longan-nano = { version = "0.1", features = ["lcd"] } unfortunately outdated version on crates.rs
longan-nano = { git = "https://github.com/riscv-rust/longan-nano", features = ["lcd"] }
riscv-rt = "0.6.1"
panic-halt = "0.2.0"
embedded-graphics = "0.6"
