[package]
name = "ledcubers"
version = "0.1.0"
authors = ["Cyrill Leutwiler <bigcyrill@hotmail.com>"]
edition = "2018"

[dependencies]
gd32vf103xx-hal = "0.5.0"
embedded-hal = "0.2.4"
nb = "1"
riscv = "0.7.0"
st7735-lcd = "0.8.1"
longan-nano = { version = "0.3", features = ["lcd"] } 
riscv-rt = "0.8.0"
panic-halt = "0.2.0"
embedded-graphics = "0.7.1"
embedded-graphics-core = "0.3.2"
smallvec = "1.7.0"
rand = { version = "0.8.4", default-features = false }
rand_pcg = "0.3.1"